fixed bottom text align

--- a/style/style.css
+++ b/style/style.css
@@ -287,8 +287,8 @@ padding-right: 20px;
 
 
 .teamContent .right{
-  /*float:left;*/
-  text-align: right;
+  float:right;
+  text-align: left;
   margin: 10px;
   font-size:18px;
   /*margin-left: 70%;*/
